--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "dagre": "^0.8.5",
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.11.13",
+    "jspdf": "^3.0.4",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-router-dom": "^7.10.0",
