Fix Vercel build errors and API URL

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
     "dagre": "^0.8.5",
+    "date-fns-tz": "^3.2.0",
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.11.13",
     "jspdf": "^3.0.4",
